refactor: update import paths to use aliases and improve code organization
fix: correct author name in Layout component

chore: change API URL from localhost:4000 to localhost:3000

refactor: update api import path in services module

chore: update main entry point and styles import to use aliases

chore: enhance tsconfig with path mappings for better module resolution

build: optimize Vite configuration for production with manual chunking and improved build settings

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,20 @@
+# ==============================================================================
+# Development Environment Variables - Expense Manager App
+# ==============================================================================
+# Copy this file to .env for local development
+# For production, use .env.production.example
+# ==============================================================================
+
+# Application Configuration
+NODE_ENV=development
+VITE_APP_NAME=Expense Manager
+VITE_APP_ENV=development
+
+# API Configuration
+# Point to your local API server
 VITE_API_URL=http://localhost:3000/api/v1
+
+# Feature Flags
+VITE_ENABLE_DEBUG=true
+VITE_ENABLE_ANALYTICS=false
+
