--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"eslint-plugin-react-refresh": "^0.4.16",
 		"postcss": "^8.4.49",
 		"tailwindcss": "^3.4.17",
+		"terser": "^5.44.1",
 		"typescript": "^5.7.2",
 		"vite": "^6.0.3"
 	}
