refactor: update references from "Expense Manager" to "Expenser" across the application

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # ==============================================================================
-# Development Environment Variables - Expense Manager App
+# Development Environment Variables - Expenser App
 # ==============================================================================
 # Copy this file to .env for local development
 # For production, use .env.production.example
@@ -7,7 +7,7 @@
 
 # Application Configuration
 NODE_ENV=development
-VITE_APP_NAME=Expense Manager
+VITE_APP_NAME=Expenser
 VITE_APP_ENV=development
 
 # API Configuration
