--- a/.env.production.example
+++ b/.env.production.example
@@ -1,6 +1,6 @@
 # Application Configuration
 NODE_ENV=production
-VITE_APP_NAME=Expense Manager
+VITE_APP_NAME=Expenser
 VITE_APP_ENV=production
 
 # API Configuration
