feat: open-source readiness

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,33 @@ VITE_APP_ENV=development
 
 # API Configuration
 # Point to your local API server
+# ==============================================
+# Expenser App - Environment Configuration
+# ==============================================
+# Copy this file to .env and update the values
+
+# API Configuration
+# The base URL for the backend API
 VITE_API_URL=http://localhost:3000/api/v1
+
+# App Configuration
+# Application name (optional - for future use)
+VITE_APP_NAME=Expenser App
+
+# Environment
+# Development, staging, or production
+VITE_APP_ENV=development
+
+# Feature Flags (optional - for future use)
+# VITE_ENABLE_ANALYTICS=false
+# VITE_ENABLE_SENTRY=false
+
+# ==============================================
+# Notes:
+# - All VITE_ prefixed variables are exposed to the browser
+# - Never put sensitive data in VITE_ variables
+# - Restart the dev server after changing these values
+# ==============================================
 
 # Feature Flags
 VITE_ENABLE_DEBUG=true
