--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"react-hook-form": "^7.54.0",
 		"react-router-dom": "^7.1.1",
 		"recharts": "^2.15.0",
+		"sonner": "^2.0.7",
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.24.1"
