--- a/package.json
+++ b/package.json
@@ -49,26 +49,34 @@
 		"@radix-ui/react-dialog": "^1.1.2",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-progress": "^1.1.8",
 		"@radix-ui/react-select": "^2.1.2",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-switch": "^1.2.6",
+		"@radix-ui/react-tabs": "^1.1.13",
 		"@radix-ui/react-toast": "^1.2.2",
 		"@radix-ui/react-tooltip": "^1.2.8",
 		"@tanstack/react-query": "^5.90.12",
 		"@tanstack/react-query-devtools": "^5.91.1",
+		"@types/react-window": "^2.0.0",
 		"axios": "^1.7.9",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
 		"lucide-react": "^0.468.0",
+		"next-themes": "^0.4.6",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.54.0",
 		"react-router-dom": "^7.1.1",
+		"react-window": "^2.2.3",
+		"react-window-infinite-loader": "^2.0.0",
 		"recharts": "^2.15.0",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss-animate": "^1.0.7",
-		"zod": "^3.24.1"
+		"zod": "^3.24.1",
+		"zustand": "^5.0.9"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.16.0",
