--- a/package.json
+++ b/package.json
@@ -45,12 +45,18 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.2.2",
+		"@radix-ui/react-accordion": "^1.2.12",
+		"@radix-ui/react-avatar": "^1.1.11",
 		"@radix-ui/react-checkbox": "^1.3.3",
 		"@radix-ui/react-dialog": "^1.1.2",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-popover": "^1.1.15",
 		"@radix-ui/react-progress": "^1.1.8",
+		"@radix-ui/react-scroll-area": "^1.2.10",
 		"@radix-ui/react-select": "^2.1.2",
+		"@radix-ui/react-separator": "^1.1.8",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-switch": "^1.2.6",
 		"@radix-ui/react-tabs": "^1.1.13",
@@ -62,10 +68,12 @@
 		"axios": "^1.7.9",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
 		"lucide-react": "^0.468.0",
 		"next-themes": "^0.4.6",
 		"react": "^18.3.1",
+		"react-day-picker": "^9.13.0",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.54.0",
 		"react-router-dom": "^7.1.1",
@@ -75,6 +83,7 @@
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss-animate": "^1.0.7",
+		"vaul": "^1.1.2",
 		"zod": "^3.24.1",
 		"zustand": "^5.0.9"
 	},
