--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
+		"echarts": "^6.0.0",
+		"echarts-for-react": "^3.0.5",
 		"lucide-react": "^0.468.0",
 		"next-themes": "^0.4.6",
 		"react": "^18.3.1",
@@ -79,7 +81,6 @@
 		"react-router-dom": "^7.1.1",
 		"react-window": "^2.2.3",
 		"react-window-infinite-loader": "^2.0.0",
-		"recharts": "^2.15.0",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss-animate": "^1.0.7",
