fix: Removed the NODE_ENV instead added MODE

--- a/.env.production.example
+++ b/.env.production.example
@@ -1,5 +1,6 @@
 # Application Configuration
-NODE_ENV=production
+# NODE_ENV=production
+MODE=production
 VITE_APP_NAME=Expenser
 VITE_APP_ENV=production
 
