--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,8 @@
 # ==============================================================================
 
 # Application Configuration
-NODE_ENV=development
+# NODE_ENV=development
+MODE=development
 VITE_APP_NAME=Expenser
 VITE_APP_ENV=development
 
