refactor: update UI components for improved responsiveness and accessibility
- Adjusted padding and margin for various components in ExpenseDetailDrawer, ExpenseDialog, ExpenseDrawer, and ExpenseList for better layout on different screen sizes.
- Modified font sizes and button dimensions across multiple components to enhance usability and visual hierarchy.
- Implemented consistent spacing and alignment in forms and buttons to improve user experience.
- Updated Web Vitals metrics reporting to include INP instead of FID for better performance tracking.
- Added service worker registration and management for PWA functionality, including persistent storage requests and storage quota checks.
- Enhanced chunk naming and asset organization in Vite configuration for better caching and performance optimization.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,14 @@
 {
 	"name": "Expenser - Expense Tracker",
 	"short_name": "Expenser",
-	"description": "Track expenses, analyze spending patterns, and achieve your financial goals",
+	"description": "Track expenses, analyze spending patterns, and achieve your financial goals. Work offline and sync when online.",
 	"start_url": "/",
+	"scope": "/",
 	"display": "standalone",
 	"background_color": "#ffffff",
 	"theme_color": "#111827",
 	"orientation": "portrait-primary",
+	"prefer_related_applications": false,
 	"icons": [
 		{
 			"src": "/icon-192.png",
@@ -28,6 +30,14 @@
 		}
 	],
 	"categories": ["finance", "productivity", "business"],
+	"screenshots": [
+		{
+			"src": "/icon-512.png",
+			"sizes": "512x512",
+			"type": "image/png",
+			"form_factor": "narrow"
+		}
+	],
 	"shortcuts": [
 		{
 			"name": "Add Expense",
@@ -55,5 +65,6 @@
 				}
 			]
 		}
-	]
+	],
+	"related_applications": []
 }
