--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss-animate": "^1.0.7",
 		"vaul": "^1.1.2",
+		"web-vitals": "^5.1.0",
 		"zod": "^3.24.1",
 		"zustand": "^5.0.9"
 	},
